feat: MCBBS modpack